syntax = "proto3";
package sge.legacy.bet.v1beta;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "sge/legacy/bet/v1beta/params.proto";
import "sge/legacy/bet/v1beta/wager.proto";

option go_package = "github.com/sge-network/sge/x/legacy/bet/types";

// Msg defines the Msg service.
service Msg {
  // Wager defines a method to place a bet with the given data.
  rpc Wager(MsgWager) returns (MsgWagerResponse) { option deprecated = true; }

  // UpdateParams defines a governance operation for updating the x/bet module
  // parameters. The authority is defined in the keeper.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse) {
    option (cosmos_proto.method_added_in) = "sge-network 1.7.1";
    option deprecated = true;
  }
}

// MsgWager defines a message to place a bet with the given data.
message MsgWager {
  option (cosmos.msg.v1.signer) = "creator";

  // creator is the bettor address.
  string creator = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  // props contains bet properties.
  WagerProps props = 2;
}

// MsgWagerResponse is the returning value in the response
// of MsgWagerResponse request.
message MsgWagerResponse { WagerProps props = 1; }

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos_proto.message_added_in) = "sge-network 1.7.1";
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address that controls the module (defaults to x/gov unless
  // overwritten).
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // params defines the x/bet parameters.
  Params params = 2
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {
  option (cosmos_proto.message_added_in) = "sge-network 1.7.1";
}
